--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -113,4 +113,5 @@
 
     <string name="example_view_pager_title">View pager tab</string>
     <string name="example_view_pager_description">Show a prompt targeting a view pager tab</string>
+    <string name="rounded_rectangle">Rounded Rectangle</string>
 </resources>
